--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href ="css/style.css">
 
        <!-- link to js  -->
+       <script src="js/app.js"></script>
 
     
       </head>
@@ -40,9 +41,13 @@
 
 
       <main>
+        <p class="test">
+        <script>getCatName()</script>
+        <script>getUserTime()</script>
         <p>
-          <!-- <script>getCatName()</script> -->
-        <script src="js/app.js"></script></p>
+        <script>displayRating()</script>
+        </p>
+        </p>
         <section>
           <img id="hero" src="https://loremflickr.com/960/260" alt="Picture of a Cat" />
           <p>
