added cat quotes

--- a/index.html
+++ b/index.html
@@ -51,32 +51,29 @@
         <section>
           <img id="hero" src="https://loremflickr.com/960/260" alt="Picture of a Cat" />
           <p>
-            I'm baby meggings lomo artisan, tote bag microdosing paleo aesthetic
-            letterpress cliche hella. Neutra literally actually street art.
-            Skateboard photo booth activated charcoal, whatever four loko
-            shoreditch umami gentrify woke paleo semiotics try-hard direct trade
-            flannel.
+             <i>"There are two means of refuge from the miseries of life: music and cats."</i>
+             -Albert Schweitzer
           </p>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
           <p>
-            I'm baby meggings lomo artisan, tote bag microdosing paleo aesthetic
-            letterpress cliche hella. Neutra literally actually street art.
+            <i>“One cat just leads to another.”</i>
+            <b>-Ernest Hemingway</b>
           </p>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
           <p>
-            I'm baby meggings lomo artisan, tote bag microdosing paleo aesthetic
-            letterpress cliche hella. Neutra literally actually street art.
+            <i>“I used to love dogs until I discovered cats.”</i>
+            <b>Nafisa Joseph</b>
           </p>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
           <p>
-            I'm baby meggings lomo artisan, tote bag microdosing paleo aesthetic
-            letterpress cliche hella. Neutra literally actually street art.
+            <i>“In ancient times cats were worshipped as gods; they have not forgotten this.”</i>
+          <b>-Terry Pratchett</b>
           </p>
         </section>
       </main>
