--- a/index.html
+++ b/index.html
@@ -51,30 +51,34 @@
         <section>
           <img id="hero" src="https://loremflickr.com/960/260" alt="Picture of a Cat" />
           <p>
-             <i>"There are two means of refuge from the miseries of life: music and cats."</i>
-             -Albert Schweitzer
+             <em><i>"There are two means of refuge from the miseries of life: music and cats."</i>
+             <b>-Albert Schweitzer</b></em>
           </p>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
           <p>
-            <i>“One cat just leads to another.”</i>
-            <b>-Ernest Hemingway</b>
+            <br>
+            <em><i>“One cat just leads to another.”</i>
+            <b>-Ernest Hemingway</b></em>
+            <br>
           </p>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
-          <p>
+         <em> <p>
+            <br>
             <i>“I used to love dogs until I discovered cats.”</i>
             <b>Nafisa Joseph</b>
-          </p>
+            <br>
+          </p></em>
         </section>
         <section class="lowerpics">
           <img src="https://loremflickr.com/320/260" alt="Picture of a Cat" />
-          <p>
+          <em><p>
             <i>“In ancient times cats were worshipped as gods; they have not forgotten this.”</i>
           <b>-Terry Pratchett</b>
-          </p>
+          </p></em>
         </section>
       </main>
       <footer>
